fulito codice su header

--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,4 +1,2 @@
-// qui definisco dei colori attraverso delle variabili in sass/scss
-
-// variabile:
-$bg-color: rgb(9, 119, 170);
+$dc-blue-color: #0c7cec;
+$text-white: #fff;
