--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,16 +1,48 @@
-// il nostro scss principale.
+// Main style
 
-@import "./fonts";
-@import "./colors";  // todo!
+@import './font';
+@import './colors';
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Roboto', serif;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto', serif;
+}
+
+.roboto {
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.col-2 {
+  width: calc(100% / 6);
+}
+
+.px-15 {
+  padding: 0 15px;
+}
+
+.img-container {
+  width: 150px;
+  height: 150px;
+  background-position: center;
+  background-size: cover;
 }
